--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
           <img   src="images/Nitesh profile pic.png" alt="Nitesh's profile pic">
           <h2>Hello.</h2>
-          <p class="intro">I am a full stack developer.I ❤ coffee and travelling.</p>
+          <p class="intro">Know, everything about something, and something about everything.....</p>
         </div>
         <hr>
         <div class="skills">
